Fix last open-source contrib issue alignment

--- a/main.css
+++ b/main.css
@@ -127,7 +127,8 @@ li a:hover {
 }
 
 .screen-cap {
-  max-width: 350px;
+  width: 350px;
+  height: 150px;
   /* position: absolute; */
   top: 15%;
   box-shadow: 2px 6px 8px #888888;
@@ -381,6 +382,10 @@ footer {
   .issue {
     margin-top: 15px;
     margin-bottom: 15px;
+  }
+
+  #last-issue {
+    min-height: 50px;
   }
 
   .bug-link {
